[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/Main.gd" type="Script" id=1]
[ext_resource path="res://Resources/purple.png" type="Texture" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="BgLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="BgLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="TextureRect" type="TextureRect" parent="BgLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="GameLayer" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="Player1Pos" type="Position2D" parent="GameLayer"]
position = Vector2( 161, 290 )

[node name="Player2Pos" type="Position2D" parent="GameLayer"]
position = Vector2( 839, 290 )

[node name="Player1Heath" type="Label" parent="GameLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
text = "100"

[node name="Player2Heath" type="Label" parent="GameLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -7.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 40, 0 )
text = "100"
align = 2

[node name="UiLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ClientBtn" type="Button" parent="UiLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 102.0
margin_bottom = 10.0
text = "ClientEnabled"

[node name="StartBtn" type="Button" parent="UiLayer"]
margin_right = 101.0
margin_bottom = 20.0
text = "StartGameBtn"

[node name="IpEdit" type="LineEdit" parent="UiLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 72, 0 )
text = "127.0.0.1"

[node name="PortEdit" type="LineEdit" parent="UiLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -12.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 58, 0 )
text = "32264"

[node name="StateUi" type="Label" parent="UiLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.5
margin_right = 24.5
margin_bottom = 14.0
text = "NoConnect"

[connection signal="pressed" from="UiLayer/ClientBtn" to="." method="_on_ServerBtn_pressed"]
[connection signal="pressed" from="UiLayer/StartBtn" to="." method="_on_StartBtn_pressed"]
